[gd_scene load_steps=42 format=3 uid="uid://dgtb5oms8qohk"]

[ext_resource type="Texture2D" uid="uid://cqcsitqnjdith" path="res://Assets/Player/player_shadow.png" id="2_5al05"]
[ext_resource type="Script" path="res://scr/Bruno.gd" id="2_c5hcc"]
[ext_resource type="Texture2D" uid="uid://vasxnjgugues" path="res://Assets/17_sin_titulo_20241214205241.png" id="3_aew5q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyhhl"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_r8j3a"]
resource_name = "D"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"entrando"
}]
}

[sub_resource type="Animation" id="Animation_tl7hj"]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_end0f"]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_p7dcc"]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_u3b40"]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_lrk7e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y0vpm"]
resource_name = "TurnDown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_xu05e"]
resource_name = "TurnLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_gflud"]
resource_name = "TurnRight"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_lstc0"]
resource_name = "TurnUp"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_4mm4t"]
resource_name = "WalkDown"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 0, 6, 0]
}

[sub_resource type="Animation" id="Animation_6v80j"]
resource_name = "WalkLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 2, 8, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hguda"]
resource_name = "WalkRight"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 2, 8, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r10ub"]
resource_name = "WalkUp"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 1, 7, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h6f1a"]
_data = {
"D": SubResource("Animation_r8j3a"),
"IdleDown": SubResource("Animation_tl7hj"),
"IdleLeft": SubResource("Animation_end0f"),
"IdleRight": SubResource("Animation_p7dcc"),
"IdleUp": SubResource("Animation_u3b40"),
"RESET": SubResource("Animation_lrk7e"),
"TurnDown": SubResource("Animation_y0vpm"),
"TurnLeft": SubResource("Animation_xu05e"),
"TurnRight": SubResource("Animation_gflud"),
"TurnUp": SubResource("Animation_lstc0"),
"WalkDown": SubResource("Animation_4mm4t"),
"WalkLeft": SubResource("Animation_6v80j"),
"WalkRight": SubResource("Animation_hguda"),
"WalkUp": SubResource("Animation_r10ub")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7vkpt"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o11g4"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ojg8a"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ac7tc"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_t0gjk"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7vkpt")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_o11g4")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ojg8a")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ac7tc")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1
sync = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e3ek5"]
animation = &"TurnLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_khpga"]
animation = &"TurnUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tu8xy"]
animation = &"TurnDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ectbj"]
animation = &"TurnRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_fsr2y"]
blend_point_0/node = SubResource("AnimationNodeAnimation_e3ek5")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_khpga")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_tu8xy")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ectbj")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t2m7v"]
animation = &"WalkLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k5n6v"]
animation = &"WalkDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ddfc7"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pejvj"]
animation = &"WalkRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_y6b32"]
blend_point_0/node = SubResource("AnimationNodeAnimation_t2m7v")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_k5n6v")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ddfc7")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_pejvj")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y5hpt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_no7a4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5b386"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6n64p"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_beqkm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n7cwv"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8h1mx"]
states/End/position = Vector2(899, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_t0gjk")
states/Idle/position = Vector2(353, 145)
states/Start/position = Vector2(993, 100)
states/Turn/node = SubResource("AnimationNodeBlendSpace2D_fsr2y")
states/Turn/position = Vector2(632, 116)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_y6b32")
states/Walk/position = Vector2(477, 35)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_y5hpt"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_no7a4"), "Walk", "Turn", SubResource("AnimationNodeStateMachineTransition_5b386"), "Turn", "Walk", SubResource("AnimationNodeStateMachineTransition_6n64p"), "Turn", "Idle", SubResource("AnimationNodeStateMachineTransition_beqkm"), "Idle", "Turn", SubResource("AnimationNodeStateMachineTransition_n7cwv")]

[node name="Bruno" type="CharacterBody2D"]
z_as_relative = false
y_sort_enabled = true
collision_mask = 14
script = ExtResource("2_c5hcc")
walk_speed = 4.0
jump_speed = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lyhhl")

[node name="Sombra" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.686275)
texture = ExtResource("2_5al05")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, -8.47033e-22)
scale = Vector2(0.78, 0.761905)
texture = ExtResource("3_aew5q")
flip_h = true
hframes = 3
vframes = 3
region_enabled = true
region_rect = Rect2(0, 0, 45, 65)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h6f1a")
}
autoplay = "IdleDown"
movie_quit_on_finish = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_8h1mx")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Turn/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false

[node name="ColicionRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
collision_mask = 6

[node name="SalienteRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
collision_mask = 4
hit_from_inside = true

[node name="PuertasRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false
